# Apollo

./: .coveragerc  .env  .gitignore  README.md  add_new_play_DB.ui  add_new_play_DB_ui.py  apollo_beets.py  audio_fx_tab.py  audiobk_tab.py  build.py  config.txt  custom_qt_widgets.py  default.db  development.env  dsp_player.py  file_explorer.py  file_explorer.ui  file_explorer_ui.py  file_manager.py  file_properties_ui.py  file_pros.ui  file_pros_main.py  file_pros_ui.py  lib_up.py  library.db  main_exe.py  main_library_tab.py  main_tab_exe.py  main_ui.py  main_window.py  main_window.ui  main_window_ui.py  main_windoww.py  module_install.py  music_tab.py  now_playing_tab.py  noxfile.py  player.py  playlist_tab.py  preferences.py  (+23 more)
.github/workflows/: python-app.yml  python-coverage.yml  python-pylint.yml  python-pytests.yml
.run/: Apollo Log NPP format.xml  Sphinx Compile.run.xml
.scripts/: run_pre_commit.bat
Apollo/: .gitignore  readme.md
Apollo/apollo/: utils.py
Apollo/apollo/db/: library_manager.py
Apollo/apollo/gui/: apollo.ui
Apollo/apollo/test/: test_library_manager.py
apollo/: __init__.py  __main__.py  config.cfg  main.py  playing_queue.py  utils.py
apollo/app/: .dir-locals.el  __init__.py  apollo_TabBindings.py  apollo_exe.py  apollo_main.py  apollo_ux.py  dataproviders.py  file_explorer.py  library_tab.py  main.py  mainapp.py  mainapp_ux.py  nowplaying_tab.py  tab_manager.py  ux_startup.py
apollo/app/custom_widgets/: __init__.py  rating_widget.py
apollo/app/item_delegates/: __init__.py  _base_delegate.py  track_delegate_mid.py  track_delegate_small.py  track_delegate_small_queue.py
apollo/app/sub_tabs/: __init__.py  audio_interface_tab.py  library_tab.py  now_playing_tab.py  playback_bar.py  playlist_tab.py  preference_subwindow.py  utils.py
apollo/app/utils_app/: file_explorer.py
apollo/assets/: __init__.py  custom.css
apollo/assets/app_themes/: __init__.py
apollo/assets/stylesheets/: __init__.py
apollo/database/: __init__.py  apollo.db  db.py
apollo/database/models/: __init__.py  library.py  paged_table.py  queue.py  selection_model.py
apollo/db/: __init__.py  database.py  library_manager.py  library_manager_app.py  metadata.txt  stylesheet.css
apollo/db/models/: __init__.py  library.py  paged_table.py  playlists.py  proxy_filter.py  queue.py  selection_model.py
apollo/dsp/: dsp_main.py
apollo/dsp/plugins/: SignalProcessors.py  apollo_mixer.py
apollo/gui/: LEDT_dialog.ui  LEDT_dialog_ui.py  NPQ_delegate.ui  apollo.ui  apollo_ui.py  apollo_ui.ui  apolloframeless_ui.ui  file_exp_ui.py  file_exp_ui.ui  ledt_dialog.py  library_manager_ui.py  library_manager_ui.ui  mainwindow_apollo.ui  ui_NPQ_delegate.py  ui_mainwindow_apollo.py
apollo/layout/: Apollo.qdp  Apollo.ui  __init__.py  compile.ps1  mainwindow.py  mainwindow.ui  preferences.py  preferences.ui  temp.py  temp.ui  ui_mainwindow.py
apollo/media/: __init__.py  player.py  processor.py
apollo/media/decoders/: __init__.py  decode.py  mp3.py  wav.py
apollo/media/filters/: __init__.py  buffered_table.py  crossfaded_input_stream.py
apollo/media/player/: __init__.py  processor.py
apollo/plugin/: watcher.py
apollo/plugins/app_theme/: __init__.py  mainwindow_apollo.css  theme.py
apollo/plugins/audio_player/: __init__.py  audiobuffer.py  audiotables.py  mediafile.py  player.py
apollo/resources/: __init__.py
apollo/rsc/: mainwindow_apollo.css
apollo/src/: apollo.py  app.py  main_content.py  playback_bar.py
apollo/src/tabs/: __init__.py  (+5 more)
apollo/test/: Test_DSP.py  Test_LIbraryManager.py  __main__.py  testUtilities.py  test_TabFunctions.py  test_library_manager.py  test_playing_queue.py  test_utils.py
beets/: beet_lib.db  beets_tools.ui  beets_tools_ui.py  beets_wrapper.py  config.yaml  file_browser.ui  file_browser_ui.py
configs/: .gitignore  __init__.py  config.py  default_qt_testing_settings.toml  default_settings.toml  default_testing_settings.toml  settings.local.toml  testing_settings.local.toml  validate.py
depricated/: main_window.py
docs/: make.bat
docs/source/: apollo.app.rst  apollo.assets.rst  apollo.db.database.rst  apollo.db.models.library.rst  apollo.db.models.playlists.rst  apollo.db.models.queue.rst  apollo.db.models.rst  apollo.db.rst  apollo.layout.rst  apollo.layout.ui_mainwindow.rst  apollo.main.rst  apollo.media.decoders.decode.rst  apollo.media.decoders.mp3.rst  apollo.media.decoders.rst  apollo.media.decoders.wav.rst  apollo.media.filters.rst  apollo.media.player.rst  apollo.media.processor.rst  apollo.media.rst  apollo.plugin.rst  apollo.plugin.watcher.rst  apollo.rst  apollo.src.apollo.rst  apollo.src.app.rst  apollo.src.main_content.rst  apollo.src.misc.rst  apollo.src.playback_bar.rst  apollo.src.rst  apollo.src.tabs.library_tab.rst  apollo.src.tabs.now_playing_tab.rst  apollo.src.tabs.playlists_tab.rst  apollo.src.tabs.rst  apollo.utils.rst  conf.py  index.rst  modules.rst
dsp_player/: dsp_player.py  dsp_player.ui  dsp_player_try.ipynb  dsp_player_ui.py  player.py  slider.ui  slider_ui.py  utils.py
dsp_player/.ipynb_checkpoints/: dsp_player_try-checkpoint.ipynb
exclude/: sphinx_conf.py
modules/: __init__.py
resources/: style.qss
resources/file_explorer/: Music_library_data.txt  config.txt  music_listing.txt
resources/icons/: icons.qrc  style.css
resources/settings/: Music_library_data.txt  config.txt  library_data.txt  music_listing.txt
tests/: linter_output.txt  runner.bat  testing_utils.py
tests/dataproviders/: test_dataproviders.py  test_librarymanager.py
tests/main/: test_dataproviders.py  test_librarymanager.py
tests/pytest/: conftest.py
tests/pytest_apollo/: .profile  conftest.py
tests/pytest_config/: conftest.py  test_production.py  test_qt_testing.py  test_testing.py
tests/pytest_qt_apollo/: .profile  conftest.py
tests/src/: conftest.py
tests/tempdir/: testing.db  testing.db-journal
tests/testing_tools/: __init__.py  tools.py
tools/: build.ps1  installer.nsi  nuitka.py  nuitka.txt
ui_forms/: file_explorer.ui  file_properties_ui.ui  main_window.ui  main_window_ui.ui  preferences.ui
(+67 files in other folders)
